# shmup

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  INSTALL  README  bootstrap.sh  build.watchr  configure.ac
src/: Makefile.am  animation.c  animation.h  common.h  graphics.c  graphics.h  input.c  input.h  main.c  sprite.c  sprite.h  sprite_stack.c  sprite_stack.h
