CMAKE_MINIMUM_REQUIRED(VERSION 2.8.9)
PROJECT(shmup)
AUX_SOURCE_DIRECTORY(src SOURCES)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_CXX_STANDARD 14)
ADD_EXECUTABLE(shmup ${SOURCES})
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)

find_package(SDL REQUIRED)
find_package(SDL_image REQUIRED)
include_directories(${SDL_INCLUDE_DIR} ${SDL_IMAGE_INCLUDE_DIR})
target_link_libraries(shmup ${SDL_LIBRARY} ${SDL_IMAGE_LIBRARY} ${SDL_MAIN})
